# cvte_task

./: create_gdbus_project.sh
project_root/: GDBus_Code_Implementation.md
project_root/ClientProject/: CMakeLists.txt
project_root/ClientProject/Include/communication/: ClientDBus.h
project_root/ClientProject/Include/filetransfer/: FileSender.h
project_root/ClientProject/Sources/communication/: ClientDBus.cpp
project_root/ClientProject/Sources/filetransfer/: FileSender.cpp
project_root/ClientProject/Sources/main/: ClientMain.cpp
project_root/ServiceProject/: CMakeLists.txt  service_class_diagram.puml  service_flow_uml.puml
project_root/ServiceProject/Include/communication/: DBusAdapter.h
project_root/ServiceProject/Include/core/: ITestListener.h  ITestService.h  SafeData.h  TestService.h
project_root/ServiceProject/Include/filetransfer/: FileReceiver.h
project_root/ServiceProject/Sources/communication/: DBusAdapter.cpp
project_root/ServiceProject/Sources/core/: SafeData.cpp  TestService.cpp
project_root/ServiceProject/Sources/filetransfer/: FileReceiver.cpp
project_root/ServiceProject/Sources/main/: ServerMain.cpp
project_root/common/Include/: FileTransfer.h  MemoryPool.h  TestData.h  ThreadPool.h
project_root/common/Sources/: MemoryPool.cpp  ThreadPool.cpp
